# FinanRAG

./: README.md  pyproject.toml  requirements.txt
scripts/: cli.py
src/: config.py
src/finanrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/generation/: generator.py
src/ingest/: pipeline.py
src/retrieval/: retriever.py
