[project]
name = "finanrag"
version = "0.1.0"
description = "Standalone Financial Analyst RAG assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "typer",
  "rich",
  "python-dotenv",
  "pandas",
  "numpy",
  "scikit-learn",
  "nltk",
  "rapidfuzz",
  "tiktoken",
  "sentence-transformers",
  "faiss-cpu; platform_system != 'Windows'",
  "faiss-cpu-windows; platform_system == 'Windows'",
  "pypdf",
  "beautifulsoup4",
  "lxml",
  "unstructured",
  "langchain-core",
  "langchain-text-splitters",
]

[project.scripts]
finanrag = "scripts.cli:app"